k8s/recognitions/recognition-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recognition-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recognition-service
  template:
    metadata:
      labels:
        app: recognition-service
    spec:
      containers:
      - name: recognition-container
        image: mrmonster786/rnr-backend-base:latest
        args: ["python", "-m", "uvicorn", "src.recognition.main:app", "--host", "0.0.0.0", "--port", "8005"]
        ports:
        - containerPort: 8005
---
apiVersion: v1
kind: Service
metadata:
  name: recognition-service
spec:
  selector:
    app: recognition-service
  ports:
    - protocol: TCP
      port: 8005
      targetPort: 8005
